[gd_scene load_steps=6 format=2]

[ext_resource path="res://textures/obstacle.png" type="Texture" id=1]
[ext_resource path="res://textures/obstacle2.png" type="Texture" id=2]
[ext_resource path="res://textures/obstacle1.png" type="Texture" id=3]
[ext_resource path="res://src/Obstacle.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 12 )

[node name="Obstacle" type="Node2D"]
script = ExtResource( 4 )
OBSTACLE_SPEED = 85.0
OBSTACLE_MAX_X = 260.0

[node name="Obstacle1" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Obstacle2" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="Obstacle3" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 1 )

[node name="Visibility" type="VisibilityNotifier2D" parent="."]
position = Vector2( -9.53674e-07, 1.19209e-07 )
scale = Vector2( 1.2, 1.2 )

[connection signal="body_entered" from="Hitbox" to="." method="on_hitbox_entered"]
[connection signal="screen_exited" from="Visibility" to="." method="queue_free"]
